--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -71,6 +71,7 @@
     "gsap": "^3.13.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
