--- a/documentation/src/pages/recipes/data/recipes/code-documentation-generator.yaml
+++ b/documentation/src/pages/recipes/data/recipes/code-documentation-generator.yaml
@@ -112,7 +112,7 @@ instructions: |
   2. **Check for existing documentation:**
      - Look for existing doc files, READMEs, or inline documentation
      - Check if there are documentation standards already in use
-     - Retrieve any stored documentation preferences from memory
+     - Check for `.goosehints`, `AGENTS.md`, or `DOCS_GUIDELINES.md` files with documentation preferences
      - If documentation already exists, analyze it to maintain consistency in style and format
      - Preserve existing documentation structure while filling in gaps for undocumented items
      - Extract inline docstrings/comments to use as foundation for generated documentation
@@ -123,9 +123,8 @@ instructions: |
      - For JavaScript/TypeScript: Look for JSDoc standards
      - For Rust: Look for rustdoc conventions
      - For Go: Look for godoc conventions
-     - Store the documentation standards in memory specifically for this {{ source_path }} project
-     - Consider creating a .goosehints file or updating AGENTS.md in the project root to persist these standards
-     - Check if .goosehints or AGENTS.md already exists and use those guidelines if present
+     - Check if `.goosehints` or `AGENTS.md` already exists and use those guidelines if present
+     - If no local guidelines exist, prepare to create them based on detected language standards
   
   ## Phase 2: Code Analysis and Extraction
   
@@ -274,11 +273,12 @@ instructions: |
       - Check for typos and grammar issues
   
   13. **Save documentation patterns:**
-      - Store the documentation style used in memory specifically for this {{ source_path }} project
-      - Remember any project-specific conventions discovered
-      - Save successful example patterns for reuse
-      - Create or update .goosehints file in {{ source_path }} with documentation preferences
-      - Consider updating AGENTS.md with documentation standards for future reference
+      - Create or update `.goosehints` file in {{ source_path }} with documentation preferences
+      - Store documentation style, format preferences, and project-specific conventions
+      - Include example patterns that worked well
+      - Consider updating `AGENTS.md` with documentation standards for team reference
+      - Optionally create `DOCS_GUIDELINES.md` with detailed documentation style guide
+      - Reference memory extension only for retrieving these guidelines (do not store full documentation or results in memory)
   
   14. **Generate summary report:**
       - List all files documented
@@ -304,5 +304,7 @@ instructions: |
   3. Location of generated documentation files
   4. Quick preview of the documentation structure
   5. Suggestions for improving inline code documentation
+  6. Confirmation that documentation guidelines have been saved to `.goosehints` or `AGENTS.md`
   
-  Remember to save documentation preferences to memory for future consistency!
+  **Note**: Documentation preferences and patterns are stored in repository files (`.goosehints`, `AGENTS.md`, or `DOCS_GUIDELINES.md`) rather than memory to avoid cluttering the LLM context on unrelated tasks.
+
