feat: tidy otel and implement http and MCP propagation
Signed-off-by: Adrian Cole <adrian@tetrate.io>

--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -69,6 +69,7 @@ tracing-opentelemetry = "0.28"
 opentelemetry = "0.27"
 opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
 opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
+opentelemetry-stdout = { version = "0.27", features = ["trace", "metrics"] }
 tonic = "0.12"
 keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
 serde_yaml = "0.9.34"
