--- a/documentation/package.json
+++ b/documentation/package.json
@@ -35,7 +35,8 @@
     "react-markdown": "^10.1.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "turndown": "^7.2.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
