--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -101,6 +101,7 @@ tokio-util = "0.7.15"
 unicode-normalization = "0.1"
 
 oauth2 = "5.0.0"
+sysinfo = "0.37.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
