--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -116,7 +116,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: |
             goose-*.tar.bz2
-            goose*.zip
+            Goose*.zip
             *.deb
             *.rpm
             download_cli.sh
